--- a/styles.css
+++ b/styles.css
@@ -1,43 +1,320 @@
 * {
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
+}
+h2 {
+  font-size: 2rem;
+  color: #131318;
 }
 
 .primary-text {
-    color: #FF5400;
+  color: #ff5400;
 }
 
 .container {
-    margin: 20px 100px;
+  margin: 20px 100px;
+}
+
+.menu-logo {
+  display: none;
 }
 
 /* header section start */
-header .logo {
-    display: flex;
-    align-items: center;
-    gap: 10px;
-    font-weight: 800;
-    font-size: 1.5rem;
+.logo {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  font-weight: 800;
+  font-size: 1.5rem;
 }
 
 nav {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
-nav>ul {
-    display: flex;
+nav > ul {
+  display: flex;
 }
 
 nav li {
-    list-style: none;
-    margin-right: 40px;
-    font-weight: 500;
-    font-size: 1rem;
+  list-style: none;
+  margin-right: 40px;
+  font-weight: 500;
+  font-size: 1rem;
 }
 
 nav li a {
-    text-decoration: none;
-    color: #424247;
+  text-decoration: none;
+  color: #424247;
+}
+
+/* popular section start */
+.popular {
+  display: flex;
+  gap: 30px;
+}
+
+.popular .text-content {
+  padding-left: 50px;
+  line-height: 1.6;
+}
+/* .popular .text-content h2 {
+  font-size: 2rem;
+  color: #131318;
+} */
+
+.popular .text-content h2,
+p,
+li {
+  padding-bottom: 10px;
+}
+
+.popular img {
+  max-width: 100%;
+  height: auto;
+}
+.popular button {
+  color: white;
+  background-color: #ff5400;
+  border: 0;
+  padding: 10px 20px;
+  border-radius: 5px;
+}
+/* 
+destination section start */
+.destination .text-content {
+  text-align: center;
+  line-height: 1.6;
+  margin: auto;
+  color: #131318;
+  padding-bottom: 20px;
+}
+/* .destination .text-content h2 {
+  font-size: 2rem;
+  color: #131318;
+} */
+
+.destination .destination-img {
+  color: white;
+}
+.destination .destination-img .first-col,
+.second-col,
+.third-col {
+  display: flex;
+  padding-bottom: 20px;
+  gap: 20px;
+  max-width: auto;
+}
+.destination .destination-img .first-col .first-img {
+  background: url("Images/Rectangle\ 5.png");
+  width: 100%;
+  height: 300px;
+  background-repeat: no-repeat;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 15px;
+}
+.destination .destination-img .first-col .second-img {
+  background: url("Images/Rectangle\ 8.png");
+  width: 100%;
+  height: 300px;
+  background-repeat: no-repeat;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 15px;
+}
+.destination .destination-img .second-col .first-img {
+  background: url("Images/Rectangle\ 6.png");
+  width: 100%;
+  height: 300px;
+  background-repeat: no-repeat;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 15px;
+}
+
+.destination .destination-img .second-col .second-img {
+  background: url("Images/Rectangle\ 7.png");
+  width: 100%;
+  height: 300px;
+  background-repeat: no-repeat;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 15px;
+}
+.destination .destination-img .second-col .third-img {
+  background: url("Images/Rectangle\ 9.png");
+  width: 100%;
+  height: 300px;
+  background-repeat: no-repeat;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 15px;
+}
+.destination .destination-img .third-col .first-img {
+  background: url("Images/Rectangle\ 11.png");
+  width: 100%;
+  height: 300px;
+  background-repeat: no-repeat;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 15px;
+}
+.destination .destination-img .third-col .second-img {
+  background: url("Images/Rectangle\ 10.png");
+  width: 100%;
+  height: 300px;
+  background-repeat: no-repeat;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 15px;
+}
+
+/* .choose section start */
+.choose .text-content {
+  text-align: center;
+  line-height: 1.6;
+  margin: auto;
+  color: #131318;
+  padding-bottom: 20px;
+}
+
+/* .choose .text-content h2 {
+  font-size: 2rem;
+  color: #131318;
+} */
+
+.choose .item-1 {
+  display: flex;
+  padding-top: 20px;
+  gap: 30px;
+}
+
+.first-item {
+  background-color: #f8eaea;
+  border-radius: 10px;
+  padding-left: 15px;
+  padding-top: 20px;
+  padding-right: 30px;
+  padding-bottom: 30px;
+}
+.second-item {
+  background-color: #cee6ec;
+  border-radius: 10px;
+  padding-left: 15px;
+  padding-top: 20px;
+  padding-right: 30px;
+  padding-bottom: 30px;
+}
+
+.item-2 {
+  margin-top: 20px;
+  max-width: 100%;
+  display: flex;
+  padding: 0 300px;
+}
+.third-item {
+  background-color: #f8eaea;
+  border-radius: 10px;
+  padding-left: 15px;
+  padding-top: 20px;
+  padding-right: 30px;
+  padding-bottom: 30px;
+}
+
+/* footer section start */
+footer {
+  display: flex;
+  justify-content: center;
+  background-color: #f0f0f5;
+  padding-top: 30px;
+}
+
+footer .logo {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding-bottom: 10px;
+}
+
+footer p {
+  margin: auto;
+  text-align: center;
+  line-height: 1.6;
+}
+
+footer .socal-logo {
+  margin: 20px 0;
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+}
+
+footer .copyright {
+  padding: 50px 0;
+}
+
+/* responsive media queries */
+/* mobile devices */
+@media screen and (max-width: 576px) {
+  .container {
+    margin: 10px 20px;
+  }
+  .header {
+    margin-top: 20px;
+  }
+  .header ul {
+    display: none;
+  }
+
+  .menu-logo {
+    display: block;
+  }
+
+  main {
+    margin: 0 auto;
+  }
+
+  .popular {
+    flex-direction: column;
+  }
+  .popular .text-content {
+    padding-left: 0;
+  }
+
+  .destination .destination-img .first-col,
+  .second-col,
+  .third-col {
+    flex-direction: column;
+  }
+
+  .choose .item-1,
+  .item-2 {
+    flex-direction: column;
+  }
+
+  .choose .item-2 {
+    padding: 0%;
+  }
+
+  footer p {
+    padding: 0px;
+    text-align: center;
+    line-height: 1.6;
+  }
+
+  footer .copyright p {
+    padding: 0px;
+    display: flex;
+    justify-content: center;
+  }
 }
