--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,7 @@
   margin: 0;
   padding: 0;
 }
+
 h2 {
   font-size: 2rem;
   color: #131318;
@@ -34,7 +35,7 @@ nav {
   align-items: center;
 }
 
-nav > ul {
+nav>ul {
   display: flex;
 }
 
@@ -60,6 +61,7 @@ nav li a {
   padding-left: 50px;
   line-height: 1.6;
 }
+
 /* .popular .text-content h2 {
   font-size: 2rem;
   color: #131318;
@@ -75,6 +77,7 @@ li {
   max-width: 100%;
   height: auto;
 }
+
 .popular button {
   color: white;
   background-color: #ff5400;
@@ -82,6 +85,7 @@ li {
   padding: 10px 20px;
   border-radius: 5px;
 }
+
 /* 
 destination section start */
 .destination .text-content {
@@ -91,6 +95,7 @@ destination section start */
   color: #131318;
   padding-bottom: 20px;
 }
+
 /* .destination .text-content h2 {
   font-size: 2rem;
   color: #131318;
@@ -99,6 +104,7 @@ destination section start */
 .destination .destination-img {
   color: white;
 }
+
 .destination .destination-img .first-col,
 .second-col,
 .third-col {
@@ -107,76 +113,75 @@ destination section start */
   gap: 20px;
   max-width: auto;
 }
+
 .destination .destination-img .first-col .first-img {
-  background: url("Images/Rectangle\ 5.png");
   width: 100%;
-  height: 300px;
-  background-repeat: no-repeat;
+  height: 400px;
+  background-image: url("Images/Rectangle\ 5.png");
+  background-size: 100% 100%;
   display: flex;
-  justify-content: center;
   align-items: center;
-  border-radius: 15px;
+  justify-content: center;
 }
+
 .destination .destination-img .first-col .second-img {
-  background: url("Images/Rectangle\ 8.png");
   width: 100%;
-  height: 300px;
-  background-repeat: no-repeat;
+  height: 400px;
+  background-image: url("Images/Rectangle\ 8.png");
+  background-size: 100% 100%;
   display: flex;
-  justify-content: center;
   align-items: center;
-  border-radius: 15px;
+  justify-content: center;
 }
+
 .destination .destination-img .second-col .first-img {
-  background: url("Images/Rectangle\ 6.png");
   width: 100%;
-  height: 300px;
-  background-repeat: no-repeat;
+  height: 400px;
+  background-image: url("Images/Rectangle\ 6.png");
+  background-size: 100% 100%;
   display: flex;
-  justify-content: center;
   align-items: center;
-  border-radius: 15px;
+  justify-content: center;
 }
 
 .destination .destination-img .second-col .second-img {
-  background: url("Images/Rectangle\ 7.png");
   width: 100%;
-  height: 300px;
-  background-repeat: no-repeat;
+  height: 400px;
+  background-image: url("Images/Rectangle\ 7.png");
+  background-size: 100% 100%;
   display: flex;
-  justify-content: center;
   align-items: center;
-  border-radius: 15px;
+  justify-content: center;
 }
+
 .destination .destination-img .second-col .third-img {
-  background: url("Images/Rectangle\ 9.png");
   width: 100%;
-  height: 300px;
-  background-repeat: no-repeat;
+  height: 400px;
+  background-image: url("Images/Rectangle\ 9.png");
+  background-size: 100% 100%;
   display: flex;
-  justify-content: center;
   align-items: center;
-  border-radius: 15px;
+  justify-content: center;
 }
+
 .destination .destination-img .third-col .first-img {
-  background: url("Images/Rectangle\ 11.png");
   width: 100%;
-  height: 300px;
-  background-repeat: no-repeat;
+  height: 400px;
+  background-image: url("Images/Rectangle\ 11.png");
+  background-size: 100% 100%;
   display: flex;
-  justify-content: center;
   align-items: center;
-  border-radius: 15px;
+  justify-content: center;
 }
+
 .destination .destination-img .third-col .second-img {
-  background: url("Images/Rectangle\ 10.png");
   width: 100%;
-  height: 300px;
-  background-repeat: no-repeat;
+  height: 400px;
+  background-image: url("Images/Rectangle\ 10.png");
+  background-size: 100% 100%;
   display: flex;
-  justify-content: center;
   align-items: center;
-  border-radius: 15px;
+  justify-content: center;
 }
 
 /* .choose section start */
@@ -199,6 +204,10 @@ destination section start */
   gap: 30px;
 }
 
+.items img {
+  padding-bottom: 20px;
+}
+
 .first-item {
   background-color: #f8eaea;
   border-radius: 10px;
@@ -207,6 +216,7 @@ destination section start */
   padding-right: 30px;
   padding-bottom: 30px;
 }
+
 .second-item {
   background-color: #cee6ec;
   border-radius: 10px;
@@ -222,6 +232,7 @@ destination section start */
   display: flex;
   padding: 0 300px;
 }
+
 .third-item {
   background-color: #f8eaea;
   margin: 0px solid;
@@ -237,6 +248,7 @@ destination section start */
 .subscribe {
   display: flex;
 }
+
 .form {
   border: 2px solid #ff5400;
   padding: 25px;
@@ -246,6 +258,7 @@ destination section start */
 .form .hr {
   margin: 20px 0;
 }
+
 input {
   width: 200px;
   height: 50px;
@@ -296,9 +309,11 @@ footer .copyright {
   .container {
     margin: 10px 20px;
   }
+
   .header {
     margin-top: 20px;
   }
+
   .header ul {
     display: none;
   }
@@ -314,6 +329,7 @@ footer .copyright {
   .popular {
     flex-direction: column;
   }
+
   .popular .text-content {
     padding-left: 0;
   }
