--- a/styles.css
+++ b/styles.css
@@ -255,12 +255,21 @@ destination section start */
   border-radius: 15px;
 }
 
+.form button {
+  color: white;
+  background-color: #ff5400;
+  border: 0;
+  width: 500px;
+  border-radius: 5px;
+  height: 50px;
+}
+
 .form .hr {
   margin: 20px 0;
 }
 
 input {
-  width: 200px;
+  width: 500px;
   height: 50px;
   border-radius: 5px;
   background-color: rgb(243, 243, 243);
