--- a/styles.css
+++ b/styles.css
@@ -247,19 +247,22 @@ destination section start */
 
 .subscribe {
   display: flex;
+  gap: 30px;
 }
 
 .form {
   border: 2px solid #ff5400;
   padding: 25px;
   border-radius: 15px;
+  width: 1300px;
+  height: 400px;
 }
 
 .form button {
   color: white;
   background-color: #ff5400;
   border: 0;
-  width: 500px;
+  width: 100%;
   border-radius: 5px;
   height: 50px;
 }
@@ -269,7 +272,7 @@ destination section start */
 }
 
 input {
-  width: 500px;
+  width: 98%;
   height: 50px;
   border-radius: 5px;
   background-color: rgb(243, 243, 243);
@@ -277,8 +280,22 @@ input {
   padding: 5px;
   padding-left: 15px;
   border: 0;
-  margin-bottom: 15px;
+  margin-bottom: 30px;
 }
+
+.banner-img {
+  width: 100%;
+  height: 450px;
+  background-image: url("Images/Rectangle\ 8\ \(1\).png");
+  background-size: 100% 100%;
+  display: flex;
+
+}
+
+/* .banner-img .banner-text {
+  background-color: #ff5400;
+ margin-top: 50px;
+} */
 
 /* footer section start */
 footer {
@@ -345,8 +362,29 @@ footer .copyright {
 
   .destination .destination-img .first-col,
   .second-col,
-  .third-col {
+  .third-col,
+  .subscribe {
     flex-direction: column;
+  }
+
+  .form {
+    border: 2px solid #ff5400;
+    padding: 2px;
+    border-radius: 15px;
+    width: 100%;
+    height: auto;
+  }
+
+  input {
+    width: 95%;
+    height: 50px;
+    border-radius: 5px;
+    background-color: rgb(243, 243, 243);
+    font-size: 15px;
+    padding: 0px;
+    padding-left: 15px;
+    border: 0;
+    margin-bottom: 30px;
   }
 
   .choose .item-1,
