--- a/style/styles.css
+++ b/style/styles.css
@@ -117,7 +117,7 @@ destination section start */
 .destination .destination-img .first-col .first-img {
   width: 100%;
   height: 400px;
-  background-image: url("Images/Rectangle\ 5.png");
+  background-image: url("../Images/Rectangle\ 5.png");
   background-size: 100% 100%;
   display: flex;
   align-items: center;
@@ -127,7 +127,7 @@ destination section start */
 .destination .destination-img .first-col .second-img {
   width: 100%;
   height: 400px;
-  background-image: url("Images/Rectangle\ 8.png");
+  background-image: url("../Images/Rectangle\ 8.png");
   background-size: 100% 100%;
   display: flex;
   align-items: center;
@@ -137,7 +137,7 @@ destination section start */
 .destination .destination-img .second-col .first-img {
   width: 100%;
   height: 400px;
-  background-image: url("Images/Rectangle\ 6.png");
+  background-image: url("../Images/Rectangle\ 6.png");
   background-size: 100% 100%;
   display: flex;
   align-items: center;
@@ -147,7 +147,7 @@ destination section start */
 .destination .destination-img .second-col .second-img {
   width: 100%;
   height: 400px;
-  background-image: url("Images/Rectangle\ 7.png");
+  background-image: url("../Images/Rectangle\ 7.png");
   background-size: 100% 100%;
   display: flex;
   align-items: center;
@@ -157,7 +157,7 @@ destination section start */
 .destination .destination-img .second-col .third-img {
   width: 100%;
   height: 400px;
-  background-image: url("Images/Rectangle\ 9.png");
+  background-image: url("../Images/Rectangle\ 9.png");
   background-size: 100% 100%;
   display: flex;
   align-items: center;
@@ -167,7 +167,7 @@ destination section start */
 .destination .destination-img .third-col .first-img {
   width: 100%;
   height: 400px;
-  background-image: url("Images/Rectangle\ 11.png");
+  background-image: url("../Images/Rectangle\ 11.png");
   background-size: 100% 100%;
   display: flex;
   align-items: center;
@@ -177,7 +177,7 @@ destination section start */
 .destination .destination-img .third-col .second-img {
   width: 100%;
   height: 400px;
-  background-image: url("Images/Rectangle\ 10.png");
+  background-image: url("../Images/Rectangle\ 10.png");
   background-size: 100% 100%;
   display: flex;
   align-items: center;
@@ -286,7 +286,7 @@ input {
 .banner-img {
   width: 100%;
   height: 450px;
-  background-image: url("Images/Rectangle\ 8\ \(1\).png");
+  background-image: url("../Images/Rectangle\ 8\ \(1\).png");
   background-size: 100% 100%;
   display: flex;
 
