--- a/style/styles.css
+++ b/style/styles.css
@@ -35,7 +35,7 @@ nav {
   align-items: center;
 }
 
-nav>ul {
+nav > ul {
   display: flex;
 }
 
@@ -49,6 +49,55 @@ nav li {
 nav li a {
   text-decoration: none;
   color: #424247;
+}
+
+.bg-img {
+  width: 100%;
+  height: 400px;
+  background-image: url("../Images/Group\ 13\ \(1\)\ \(1\).png");
+  background-size: 100% 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.explore .text-content {
+  align-items: center;
+  text-align: center;
+  color: white;
+}
+.explore .text-content h1 {
+  font-weight: 700;
+  font-size: 2.5rem;
+  padding-bottom: 15px;
+}
+
+.explore .from {
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+  background-color: rgb(197, 205, 205);
+  opacity: 0.8;
+  margin: 0 8rem;
+  margin-top: 20px;
+  padding: 10px;
+  border-radius: 5px;
+}
+.explore .from p {
+  background-color: white;
+  /* padding: 10px 30px 10px 10px; */
+  padding: 10px;
+  padding-right: 3rem;
+  border-radius: 5px;
+  display: flex;
+  border: 0;
+
+  align-items: center;
+}
+
+.explore .from .find {
+  background-color: #ff5400;
+  color: white;
 }
 
 /* popular section start */
@@ -72,7 +121,6 @@ nav li a {
 p,
 li {
   padding-bottom: 10px;
-  
 }
 
 .popular img {
@@ -291,7 +339,6 @@ input {
   background-image: url("../Images/Rectangle\ 8\ \(1\).png");
   background-size: 100% 100%;
   display: flex;
-
 }
 
 /* .banner-img .banner-text {
@@ -365,9 +412,21 @@ footer .copyright {
   .destination .destination-img .first-col,
   .second-col,
   .third-col,
-  .subscribe {
+  .subscribe,
+  .from {
     flex-direction: column;
   }
+
+  .explore .from {
+    margin: 0 20px;
+  }
+
+  .explore .text-content {
+    align-items: center;
+    text-align: center;
+    color: white;
+    padding: 0 20px;
+}
 
   .form {
     border: 2px solid #ff5400;
