--- a/style/styles.css
+++ b/style/styles.css
@@ -18,6 +18,7 @@ button {
   border: 0;
   padding: 10px 20px;
   border-radius: 5px;
+  cursor: pointer;
 }
 
 .container {
@@ -62,11 +63,12 @@ nav li a {
 .bg-img {
   width: 100%;
   height: 400px;
-  background-image: url("../Images/Group\ 13\ \(1\)\ \(1\).png");
+  background-image:  linear-gradient(to bottom, rgba(0, 1, 1, 0.52), rgba(31, 39, 43, 0.746)),url("../Images/Group\ 13\ \(1\)\ \(1\).png");
   background-size: 100% 100%;
   display: flex;
   align-items: center;
   justify-content: center;
+  
 }
 
 .explore .text-content {
@@ -332,6 +334,12 @@ destination section start */
   padding-bottom: 10px;
 }
 
+.Packages {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 30px 0;
+}
 
 /* subscribe section start */
 .subscribe {
@@ -384,6 +392,23 @@ input {
   background-color: #ff5400;
  margin-top: 50px;
 } */
+
+/* Perfect section start */
+.Perfect {
+  display: flex;
+  gap: 20px;
+  line-height: 1.8rem;
+  padding-bottom: 20px;
+}
+.Perfect .text-content ul {
+  padding-left: 20px;
+}
+
+.Perfect iframe {
+  border-radius: 15px;
+  width: 500px;
+  height: 300px;
+}
 
 /* footer section start */
 footer {
@@ -452,7 +477,8 @@ footer .copyright {
   .second-col,
   .third-col,
   .subscribe,
-  .from {
+  .from,
+  .Perfect {
     flex-direction: column;
   }
 
@@ -469,9 +495,9 @@ footer .copyright {
 
   .form {
     border: 2px solid #ff5400;
-    padding: 2px;
+    padding: 10%;
     border-radius: 15px;
-    width: 100%;
+    width: 80%;
     height: auto;
   }
 
@@ -502,14 +528,16 @@ footer .copyright {
     height: 400px;
   } */
 
-
   .discounts .card {
     padding: 20px;
     margin: 50px;
     border-radius: 10px;
   }
 
-
+  .Perfect iframe {
+    width: 100%;
+    height: auto;
+  }
   footer p {
     padding: 0px;
     text-align: center;
